--- a/partials/reporting/by-entities.html
+++ b/partials/reporting/by-entities.html
@@ -1,8 +1,37 @@
 
-<input ng-model="begin" />
-<input ng-model="end" />
-<select ng-model="selectedType" ng-options="t for t in types" ng-change="updateList()" />
-<select ng-model="selectedEntity" ng-options="e.name for e in entities" ng-change="updateData()" />
+
+<div class="row">
+
+	<div class="col-md-3">
+		<datepicker ng-model="begin" min-mode="month" datepicker-mode="beginMode"></datepicker>
+	</div>
+
+	<div class="col-md-3">
+		<datepicker ng-model="end" min-mode="month" datepicker-mode="endMode"></datepicker>
+	</div>
+
+	<div class="col-md-6">
+		Quel type voulez vous consuter?
+		<ui-select ng-model="selectedEntityType.selected" theme="bootstrap" ng-disabled="disabled" ng-change="updateList()">
+			<ui-select-match placeholder="Quel type voulez-vous consulter">{{$select.selected}}</ui-select-match>
+			<ui-select-choices repeat="entityType in entityTypes | filter: $select.search">
+				<span>{{entityType}}</span>
+			</ui-select-choices>
+		</ui-select>
+
+		<br/>
+		Quels entitées voulez vous voir?
+		<ui-select multiple ng-model="selectedEntities.selected" theme="bootstrap" ng-disabled="disabled" style="height: 72px;" ng-change="updateData()">
+			<ui-select-match placeholder="">
+				{{$item.name}}
+			</ui-select-match>
+			<ui-select-choices repeat="entity in entities | filter: {name: $select.search}">
+				{{entity.name}}
+			</ui-select-choices>
+		</ui-select>
+
+	</div>
+</div>
 
 <hr/>
 
@@ -15,19 +44,19 @@
 	<thead>
 		<tr>
 			<th></th>
-			<th ng-repeat="period in stats.periods">{{period}}</th>
+			<th ng-repeat="period in statistics.periods">{{period}}</th>
 		</tr>
 	</thead>
-	<tbody ng-repeat="line in stats.lines">
+	<tbody ng-repeat="line in statistics.lines">
 
 		<tr ng-repeat="dependency in line.dependencies" ng-show="showDependencies">
-			<th style="background-color: #ffffaa; ">{{dependency.name}}</th>
-			<td ng-repeat="period in stats.periods">{{stats.data[period][dependency.id]}}</td>
+			<td>{{dependency.name}}</th>
+			<td ng-repeat="period in statistics.periods">{{statistics.data[period][dependency.id]}}</td>
 		</tr>
 
 		<tr>
-			<th style="background-color: #aaffaa; ">{{line.name}}</th>
-			<td ng-repeat="period in stats.periods">{{stats.data[period][line.id]}}</td>
+			<th>{{line.name}}</th>
+			<td ng-repeat="period in statistics.periods">{{statistics.data[period][line.id]}}</td>
 		</tr>
 
 	</tbody>
