--- a/partials/input/list.html
+++ b/partials/input/list.html
@@ -1,22 +1,34 @@
-<table class="table table-bordered table-stripped table-condensed">
-	<thead>
-		<tr>
-			<th>Nom</th>
-			<th>Pays</th>
-			<th>Indicateurs manquants / total</th>
-			<th>Periode</th>
-			<th></th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="input in inputs">
-			<td>{{input.centerName}}</td>
-			<td>{{input.country}}</td>
-			<td>{{input.missingIndicators}} / {{input.indicators}}</td>
-			<td>{{input.period}}</td>
-			<td>??</td>
-		</tr>
-	</tbody>
-</table>
+<div class="row">
+	<div class="col-md-12">
 
+		<datepicker ng-model="inputMonth" min-mode="month" datepicker-mode="datePickerMode" ng-change="reload()"></datepicker>
+
+		<hr/>
+
+		<input type="checkbox" ng-model="showFinished" id="show-finished" />
+		<label for="show-finished">Montrer les saisies terminées</label>
+
+		<table class="table table-bordered table-stripped table-condensed">
+			<thead>
+				<tr>
+					<th>Centre</th>
+					<th>Projet</th>
+					<th>Pays</th>
+					<th>Indicateurs manquants / total</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="input in inputs" ng-show="input.missingIndicators || showFinished">
+					<td>{{input.centerName}}</td>
+					<td>{{input.projectName}}</td>
+					<td>{{input.projectCountry}}</td>
+					<td>{{input.missingIndicators}} / {{input.totalIndicators}}</td>
+					<td><a href="#inputs/{{period(inputMonth)}}/{{input.centerId}}">Éditer</a></td>
+				</tr>
+			</tbody>
+		</table>
+
+	</div>
+</div>
 
