--- a/partials/reporting/by-entities.html
+++ b/partials/reporting/by-entities.html
@@ -1,13 +1,13 @@
-
-
 <div class="row">
 
 	<div class="col-md-3">
-		<datepicker ng-model="begin" min-mode="month" datepicker-mode="beginMode"></datepicker>
+		Date de début
+		<datepicker ng-model="begin" min-mode="month" datepicker-mode="beginMode" ng-change="updateData()"></datepicker>
 	</div>
 
 	<div class="col-md-3">
-		<datepicker ng-model="end" min-mode="month" datepicker-mode="endMode"></datepicker>
+		Date de fin
+		<datepicker ng-model="end" min-mode="month" datepicker-mode="endMode" ng-change="updateData()"></datepicker>
 	</div>
 
 	<div class="col-md-6">
@@ -33,32 +33,33 @@
 	</div>
 </div>
 
+
 <hr/>
 
 <input type="checkbox" ng-model="showDependencies" id="show-dependencies" />
-<label for="show-dependencies">Montrer les dependences</label>
+<label for="show-dependencies">Voir les variables de calcul</label>
+<br/>
 
-<hr/>
+<input type="checkbox" ng-model="colorize" id="colorize" />
+<label for="colorize">Colorer</label>
+<br/>
 
 <table class="table table-bordered table-stripped table-condensed">
 	<thead>
 		<tr>
 			<th></th>
-			<th ng-repeat="period in statistics.periods">{{period}}</th>
+			<th ng-repeat="period in statistics.periods" style="white-space: nowrap">{{period}}</th>
 		</tr>
 	</thead>
 	<tbody ng-repeat="line in statistics.lines">
-
 		<tr ng-repeat="dependency in line.dependencies" ng-show="showDependencies">
 			<td>{{dependency.name}}</th>
-			<td ng-repeat="period in statistics.periods">{{statistics.data[period][dependency.id]}}</td>
+			<td ng-repeat="period in statistics.periods">{{statistics.data[period][dependency.id] | number: 2}}</td>
 		</tr>
-
 		<tr>
 			<th>{{line.name}}</th>
-			<td ng-repeat="period in statistics.periods">{{statistics.data[period][line.id]}}</td>
+			<td ng-repeat="period in statistics.periods">{{statistics.data[period][line.id] | number: 2}}</td>
 		</tr>
-
 	</tbody>
 </table>
 
