--- a/partials/projects/description.html
+++ b/partials/projects/description.html
@@ -1,19 +1,46 @@
-<form class="simple-form">
 
-	Nom: <input type="text" ng-model="project.name" /><br/>
-	Pays: <input type="text" ng-model="project.country" /><br/>
+<div class="row">
+	<div class="col-md-2">
+		<ng-include src="'partials/projects/menu.html'"></ng-include>
+	</div>
 
-	Etat du projet:
-	<select ng-model="project.state">
-		<option value="running">En activite</option>
-		<option value="terminated">Interrompu</option>
-		<option value="finished">Termine</option>
-	</select>
-	<br/>
+	<div class="col-md-10">
+		<form class="form-horizontal" role="form">
+			<div class="form-group">
+				<label for="name" class="col-sm-2 control-label">Nom</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="name" ng-model="project.name">
+				</div>
+			</div>
 
-	Date de lancement: <input type="date" ng-model="project.start_date" /><br/>
-	Date de fin: <input type="date" ng-model="project.end_date" /><br/>
+			<div class="form-group">
+				<label for="country" class="col-sm-2 control-label">Pays</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="country" ng-model="project.country">
+				</div>
+			</div>
 
-	<button ng-click="reset()">RESET</button>
-	<button ng-click="update(project)">SAVE</button>
-</form>
+			<div class="form-group">
+				<label for="begin" class="col-sm-2 control-label">Date de lancement</label>
+				<div class="col-sm-10">
+					<datepicker ng-model="begin" min-mode="month" datepicker-mode="beginMode"></datepicker>
+				</div>
+			</div>
+
+			<div class="form-group">
+				<label for="end" class="col-sm-2 control-label">Date de fin</label>
+				<div class="col-sm-10">
+					<datepicker ng-model="end" min-mode="month" datepicker-mode="endMode"></datepicker>
+				</div>
+			</div>
+
+			<button ng-click="reset()" class="btn btn-default">RESET</button>
+			<button ng-click="update(project)" class="btn btn-default">SAVE</button>
+		</form>
+
+	</div>
+</div>
+
+
+
+
