--- a/partials/input/edit.html
+++ b/partials/input/edit.html
@@ -22,4 +22,5 @@
 	<hr/>
 </div>
 
-<button ng-click="save()">Save</button>
+<button class="btn btn-default" ng-click="save()">Sauvegarder</button>
+<button class="btn btn-danger" ng-click="delete()">Supprimer</button>
