--- a/partials/projects/center-list.html
+++ b/partials/projects/center-list.html
@@ -4,26 +4,37 @@
 	</div>
 
 	<div class="col-md-10">
+
 		<table class="table table-bordered table-stripped table-condensed">
 			<thead>
 				<tr>
-					<th>Name</th>
-					<th>Latitude</th>
-					<th>Longitude</th>
+					<th>Nom</th>
+					<th>Nombre de saisies</th>
 					<th></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr ng-repeat="(centerId, center) in project.center">
 					<td>{{center.name}}</td>
-					<td>{{center.latitude}}</td>
-					<td>{{center.longitude}}</td>
-					<td><a href="#projects/{{project._id}}/centers/{{centerId}}">Voir</a></td>
+					<td>{{usage[centerId] || 0}}</td>
+					<td>
+						<button class="btn btn-danger btn-xs" ng-click="delete(centerId)" ng-disabled="usage[centerId]">
+							Supprimer
+						</button>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="3">
+						<div class="input-group input-group-sm" style="width: 100%">
+							<input type="text" class="form-control" ng-model="newCenter" placeholder="Nom du nouveau centre">
+							<span class="input-group-btn">
+								<button class="btn btn-default" ng-click="create()">Ajouter</button>
+							</span>
+						</div>
+					</td>
 				</tr>
 			</tbody>
 		</table>
-
-		<button ng-click="create()">Creer nouveau centre</button>
 
 	</div>
 </div>
