--- a/partials/projects/description.html
+++ b/partials/projects/description.html
@@ -6,6 +6,7 @@
 
 	<div class="col-md-10">
 		<form class="form-horizontal" role="form">
+			
 			<div class="form-group">
 				<label for="name" class="col-sm-2 control-label">Nom</label>
 				<div class="col-sm-10">
@@ -23,14 +24,14 @@
 			<div class="form-group">
 				<label for="begin" class="col-sm-2 control-label">Date de lancement</label>
 				<div class="col-sm-10">
-					<datepicker ng-model="begin" min-mode="month" datepicker-mode="beginMode"></datepicker>
+					<input type="month" class="form-control" id="begin" ng-model="project.begin">
 				</div>
 			</div>
 
 			<div class="form-group">
 				<label for="end" class="col-sm-2 control-label">Date de fin</label>
 				<div class="col-sm-10">
-					<datepicker ng-model="end" min-mode="month" datepicker-mode="endMode"></datepicker>
+					<input type="month" class="form-control" id="end" ng-model="project.end">
 				</div>
 			</div>
 
