--- a/partials/reporting/by-entities.html
+++ b/partials/reporting/by-entities.html
@@ -12,7 +12,7 @@
 
 	<div class="col-md-3">
 		Sur quoi?<br/>
-		<ui-select multiple ng-model="selectedEntities.selected" theme="bootstrap" ng-disabled="disabled"ng-change="updateData()">
+		<ui-select multiple ng-model="selectedEntities.selected" theme="bootstrap" ng-change="updateData()">
 			<ui-select-match placeholder="">
 				{{$item.name}}
 			</ui-select-match>
