--- a/css/app.css
+++ b/css/app.css
@@ -6,9 +6,12 @@ textarea {
 }
 
 .indicator-level-1, .indicator-level-2, .indicator-level-3 {
-	border: solid black;
-	border-width: 1px 0 0 1px;
+	border: solid #ccc;
+	border-width: 1px;
 	padding: 5px 0 0 5px;
+	border-radius: 3px;
+	margin-bottom: 5px;
+	margin-right: 5px;
 }
 
 .indicator-header {
@@ -17,15 +20,19 @@ textarea {
 
 .indicator-level-1 {
 	margin-left: 0px;
-	border-width: 1px;
+	background-color: white;
 }
 
 .indicator-level-2 {
 	margin-left: 40px;
+	background-color: #f8f8f8;
+
 }
 
 .indicator-level-3 {
 	margin-left: 40px;
+	background-color: #f0f0f0;
+
 }
 
 .indicator-level-3 .color {
@@ -42,4 +49,12 @@ textarea {
 .indicator-level-3 a {
 	float: right;
 	margin-right: 10px;
+}
+
+.input-xs {
+    height: 22px;
+    padding: 5px 5px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
 }
