--- a/partials/indicators/edit.html
+++ b/partials/indicators/edit.html
@@ -4,10 +4,135 @@
 	</div>
 
 	<div class="col-md-10">
+		<form class="form-horizontal" role="form" ng-show="indicator">
+			<fieldset>
+				<legend>Définition</legend>
 
-		<div class="alert alert-warning" role="alert">Attention: page pas encore faite.</div>
+				<div class="form-group">
+					<label for="input-standard" class="col-sm-2 control-label">Standard</label>
+					<div class="col-sm-10">
+						<input id="input-standard" type="checkbox" ng-model="indicator.standard" />
+					</div>
+				</div>
 
+				<div class="form-group">
+					<label for="input-name" class="col-sm-2 control-label">Nom</label>
+					<div class="col-sm-10">
+						<input id="input-name" type="text" class="form-control" ng-model="indicator.name" placeholder="Exemple: Part des dossiers patient bien remplis" />
+					</div>
+				</div>
 
+				<div class="form-group">
+					<label for="input-description" class="col-sm-2 control-label">Description</label>
+					<div class="col-sm-10">
+						<textarea id="input-description" class="form-control" ng-model="indicator.description" placeholder="Exemple: Mesurer le niveau de formation du personnel médical qui rempli les dossiers patients. Sa mesure est facile sur des projets de petite dimension, à éviter dans un autre cadre."></textarea>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="input-history" class="col-sm-2 control-label">Historique</label>
+					<div class="col-sm-10">
+						<textarea id="input-history" ng-model="indicator.source" class="form-control" placeholder="Exemple: Défini en 2007 par l'OMS et utilisé sur les projets de UNICEF ... cet indicateur a permi de suivre les objectifs ..."></textarea>
+					</div>
+				</div>
+
+			</fieldset>
+
+			<fieldset>
+				<legend>Classement</legend>
+
+				<div class="form-group">
+					<label for="input-types" class="col-sm-2 control-label">Types</label>
+					<div class="col-sm-10">
+
+						<ui-select id="input-types" multiple ng-model="indicator.types" theme="bootstrap">
+							<ui-select-match placeholder="Sélectionnez un ou plusieurs types">
+								{{$item.name}}
+							</ui-select-match>
+							<ui-select-choices repeat="type._id as type in types | filter: {name: $select.search}">
+								{{type.name}}
+							</ui-select-choices>
+						</ui-select>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="input-themes" class="col-sm-2 control-label">Thématiques</label>
+					<div class="col-sm-10">
+						<ui-select id="input-themes" multiple ng-model="indicator.themes" theme="bootstrap">
+							<ui-select-match placeholder="Sélectionnez une ou plusieures thématiques">
+								{{$item.name}}
+							</ui-select-match>
+							<ui-select-choices repeat="theme._id as theme in themes | filter: {name: $select.search}">
+								{{theme.name}}
+							</ui-select-choices>
+						</ui-select>
+					</div>
+				</div>
+			</fieldset>
+
+			<fieldset>
+				<legend>Calcul</legend>
+
+				<div class="form-group">
+					<label for="input-sum-allowed" class="col-sm-2 control-label">Sommable</label>
+					<div class="col-sm-10">
+						<input id="input-sum-allowed" type="checkbox" ng-model="indicator.sumAllowed">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="name" class="col-sm-2 control-label">Formules</label>
+					<div class="col-sm-10">
+						<table class="table table-bordered table-condensed" ng-repeat="(formulaId, formula) in indicator.formulas">
+							<tr>
+								<td style="width: 250px">Nom</td>
+								<td>
+									<div class="input-group">
+										<input type="text"
+											   class="form-control"
+											   placeholder="Exemple: Pourcentage entre dossiers patient bien remplis et total"
+											   ng-model="formula.name" />
+
+										<span class="input-group-btn">
+											<button class="btn btn-danger" ng-click="deleteFormula(formulaId)">Retirer</button>
+										</span>
+									</div>
+								</td>
+							</tr>
+							<tr>
+								<td>Formule</td>
+								<td>
+									<input type="text"
+										   class="form-control"
+										   ng-model="formula.expression"
+										   placeholder="Exemple: 100 * a / b" />
+								</td>
+							</tr>
+							<tr ng-repeat="parameterName in getSymbols(formula.expression)">
+								<td>Paramètre <strong>"{{parameterName}}"</strong></td>
+								<td>
+									<ui-select ng-model="formula.parameters[parameterName]" theme="bootstrap">
+										<ui-select-match placeholder="Choisissez un indicateur">{{$select.selected.name}}</ui-select-match>
+										<ui-select-choices repeat="indicator._id as indicator in indicators | filter: $select.search">
+											<span>{{indicator.name}}</span>
+										</ui-select-choices>
+									</ui-select>
+								</td>
+							</tr>
+						</table>
+
+						<button class="btn btn-default" ng-click="addFormula()">Ajouter une formule</button>
+					</div>
+				</div>
+			</fieldset>
+
+			<div class="pull-right">
+				<button class="btn btn-primary" ng-click="save()">Sauvegarder</button>
+				<button class="btn btn-warning" ng-click="reset()">Réinitialiser</button>
+				<button class="btn btn-danger" ng-click="remove()">Supprimer</button>
+			</div>
+
+		</form>
 	</div>
 </div>
-
