--- a/partials/indicators/list.html
+++ b/partials/indicators/list.html
@@ -5,26 +5,15 @@
 
 	<div class="col-md-10">
 		
-		<div class="alert alert-warning" role="alert">
-			<ul>
-				<li>Hors charte! refaire proprement</li>
-				<li>Rajouter quel projet utilise quel indicateur (et combien de saisies) dans des tooltips sur chaque ligne</li>
-			</ul>
-		</div>
-
 		<div class="indicator-level-1" ng-repeat="(themeId, indicatorByTypes) in hierarchy">
-			<div class="indicator-header">
-				<button ng-click="open1 = !open1" class="btn btn-default btn-xs">
-					<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !open1, 'fa-minus-circle': open1}"></i>
-				</button>
+			<div class="indicator-header" ng-click="open1 = !open1">
+				<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !open1, 'fa-minus-circle': open1}"></i>
 				{{themes[themeId].name}}
 			</div>
 
 			<div class="indicator-level-2" ng-repeat="(typeId, indicators) in indicatorByTypes" ng-show="open1">
-				<div class="indicator-header">
-					<button ng-click="open2 = !open2" class="btn btn-default btn-xs">
-						<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !open2, 'fa-minus-circle': open2}"></i>
-					</button>
+				<div class="indicator-header" ng-click="open2 = !open2">
+					<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !open2, 'fa-minus-circle': open2}"></i>
 					{{types[typeId].name}}
 				</div>
 
