--- a/partials/indicators/list.html
+++ b/partials/indicators/list.html
@@ -26,6 +26,7 @@
 			</div>
 		</div>
 
+		<button class="btn btn-default" ng-click="create()">Créer un nouvel indicateur</button>
 	</div>
 </div>
 
