--- a/partials/projects/center-list.html
+++ b/partials/projects/center-list.html
@@ -5,6 +5,12 @@
 
 	<div class="col-md-10">
 
+		<ol class="breadcrumb">
+			<li><a href="#projects">Projets</a></li>
+			<li ng-show="project._id"><a href="#projects/{{project._id}}">{{project.name}}</a></li>
+			<li class="active">Liste des centres</li>
+		</ol>
+
 		<table class="table table-bordered table-stripped table-condensed">
 			<thead>
 				<tr>
