--- a/partials/projects/planning-edit.html
+++ b/partials/projects/planning-edit.html
@@ -12,7 +12,12 @@
 				<div class="form-group">
 					<label for="indicator" class="col-sm-2 control-label">Indicateur</label>
 					<div class="col-sm-10">
-						<select class="form-control" ng-model="indicator" ng-options="i.name for i in indicators"></select>
+						<ui-select ng-model="indicatorId" theme="bootstrap" required>
+							<ui-select-match placeholder="Choisissez un indicateur">{{$select.selected.name}}</ui-select-match>
+							<ui-select-choices repeat="indicator._id as indicator in indicators | filter: $select.search">
+								<span>{{indicator.name}}</span>
+							</ui-select-choices>
+						</ui-select>
 					</div>
 				</div>
 
@@ -23,6 +28,7 @@
 								ng-model="planning.formula"
 								ng-options="formula.name for (formulaId, formula) in indicator.formulas"
 								ng-disabled="!indicator">
+
 							<option value="">-- Saisie manuelle --</option>
 						</select>
 					</div>
@@ -148,12 +154,11 @@
 					</div>
 				</div>
 
-
 			</fieldset>
 
-			<button ng-click="reset()" class="btn btn-danger">DELETE</button>
-			<button ng-click="reset()" class="btn btn-default">RESET</button>
-			<button ng-click="update(project)" class="btn btn-default">SAVE</button>
+			<button ng-click="update()" class="btn btn-primary">Sauvegarder</button>
+			<button ng-click="reset()" class="btn btn-default">Reinitialiser</button>
+			<button ng-click="reset()" class="btn btn-danger">Supprimer</button>
 		</form>
 
 	</div>
